# family_screen

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/board/: CMakeLists.txt
components/board/include/board/: board.h
components/board/src/: board.c
components/demos/: CMakeLists.txt
components/demos/include/demos/: demos.h
components/demos/src/: demos_bounce.c  demos_checker.c  demos_color.c  demos_gradient.c
components/display_panel/: CMakeLists.txt
components/display_panel/include/display_panel/: display.h
components/display_panel/src/: display.c
components/power_ldo/: CMakeLists.txt
components/power_ldo/include/power_ldo/: power_ldo.h
components/power_ldo/src/: power_ldo.c
components/touch_gt9xx/: CMakeLists.txt
components/touch_gt9xx/include/touch_gt9xx/: touch_gt9xx.h
components/touch_gt9xx/src/: touch_gt9xx.c
components/ui_gfx/: CMakeLists.txt
components/ui_gfx/include/ui_gfx/: font5x7.h  ui_draw.h
components/ui_gfx/src/: font5x7.c  ui_draw.c
components/ui_menu/: CMakeLists.txt
components/ui_menu/include/ui_menu/: menu.h
components/ui_menu/src/: menu.c
components/util/: CMakeLists.txt
components/util/include/util/: fb.h  timing.h
components/util/src/: fb.c  timing.c
main/: CMakeLists.txt  idf_component.yml  main.c
